<resources>
    <string name="app_name">PlanYourHealth</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="logout">Logout</string>
    <string name="loginText">Please login with your Google Account</string>
    <string name="email_register_string">New Button</string>
    <string name="title_activity_registration">RegistrationActivity</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Now.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_post_login">PostLoginActivity</string>
    <string name="title_activity_reg">RegActivity</string>
    <string name="title_activity_signin">SigninActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_other">OtherActivity</string>
    <string name="logout_string">Logout</string>
    <string name="title_activity_the_other">TheOtherActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_report">reportActivity</string>
    <string name="title_activity_product_description">ProductDescriptionActivity</string>
    <string name="title_activity_cart">Cart</string>
</resources>
